samples/_failures_safe/1761626605_833a52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6acf6465.c: In function ‘main’:
./samples/SAFE/__tmp_6acf6465.c:141:9: error: expected declaration or statement at end of input
  141 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_6acf6465.c:141:9: error: expected declaration or statement at end of input
